# planNAV

./: .dockerignore  CHALLENGE.md  DESIGN.md  Dockerfile  main.py  pyproject.toml  run.py
app/: main.py
app/engine/: spotter.py  trajectory.py
app/static/css/: style.css
app/static/css/modules/: 1-base.css  2-layout.css  4-sections.css  5-utils.css
app/templates/: conflicts.html  dashboard.html  hotspots.html  index.html  layout.html
app/templates/partials/: aircraft_image.html  conflict_analysis.html  conflicts.html  flight_detail.html  visualizer.html
data/: canadian_flights_1000.json  canadian_flights_250.json
modules/: 1-base.css  2-layout.css  3-components.css
tests/: test_engine.py
